samples/_failures_safe/1761344490_3cdb14_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f7339692.c: In function ‘main’:
./samples/SAFE/__tmp_f7339692.c:150:5: error: expected expression at end of input
  150 |     kruskalMST(&
      |     ^~~~~~~~~~
./samples/SAFE/__tmp_f7339692.c:150:5: error: expected declaration or statement at end of input
